# PharmaGenomics-Advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  agent.yaml  docker-compose.yml  pyproject.toml  readme.md
agents/brca_agent/: agent.yaml  prompt.md
agents/egfr_agent/: agent.yaml  prompt.md
agents/literature_rag/: agent.yaml  prompt.md
agents/pgx_advisor/: agent.yaml  prompt.md
agents/supervisor/: agent.yaml  prompt.md
agents/tp53_agent/: agent.yaml  prompt.md
data/samples/: sample_variants.vcf  sample_variants_storytelling.vcf
docs/: 01-biomedical-foundations.md  02-ai-agents-concepts.md  03-architecture-overview.md  04-implementation-guide.md  05-deployment-guide.md  06-debugging-troubleshooting.md  07-adk-faq.md  08-kaggle-writeup-draft.md
mcp_servers/: __init__.py  clinvar_server.py  cpic_server.py  pharmgkb_server.py
notebooks/: 01_pipeline_walkthrough.ipynb
scripts/: demo.py  entrypoint.sh  generate_media_assets.py  setup.ps1  setup.sh
src/: __init__.py  exceptions.py  mcp_servers_bridge.py  models.py
src/agents/: __init__.py  handlers.py  message_bus.py  supervisor.py
src/inference/: __init__.py  ollama_client.py
src/infrastructure/: __init__.py  ollama_check.py
src/parsers/: __init__.py  vcf_parser.py
src/pipeline/: __init__.py  adk_workflow.py  orchestrator.py
src/rag/: __init__.py  literature_service.py
src/security/: __init__.py  audit_logger.py  input_validator.py  layer.py  phi_detector.py  rate_limiter.py
tests/: __init__.py
tests/integration/: test_adk_runtime.py  (+2 more)
tools/: __init__.py  agents_cli.py
(+27 files in other folders)
