[project]
name = "pharmagenomics-advisor"
version = "0.1.0"
description = "Multi-Agent Precision Medicine Pipeline — AI-powered cancer variant interpretation and pharmacogenomics drug recommendations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Faraz", email = "drthgz@users.noreply.github.com" }
]

dependencies = [
    "google-adk>=2.0.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "property: property-based tests (hypothesis)",
    "integration: integration tests requiring Ollama",
    "slow: tests that take >30 seconds",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
